[BLAZE-1165] Enable scalatest to run the blaze UT (#1161)
* Enable scalatest to run the blaze UT

* Skip for spark-3.0

* Fix format