@@ -32,10 +32,38 @@
     <scalaLongVersion>2.12.17</scalaLongVersion>
     <maven.version>3.8.1</maven.version>
     <maven.plugin.scala.version>4.9.2</maven.plugin.scala.version>
+    <maven.plugin.scalatest.version>2.2.0</maven.plugin.scalatest.version>
+    <maven.plugin.scalatest.exclude.tags />
+    <maven.plugin.scalatest.include.tags />
+    <maven.plugin.scalatest.debug.enabled>false</maven.plugin.scalatest.debug.enabled>
+    <maven.plugin.surefire.version>3.3.0</maven.plugin.surefire.version>
     <maven.plugin.shade.version>3.5.2</maven.plugin.shade.version>
     <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
+
     <scalamacros.paradise.version>2.1.1</scalamacros.paradise.version>
     <semanticdb.version>4.8.1</semanticdb.version>
+
+    <extraJavaTestArgs>-XX:+IgnoreUnrecognizedVMOptions
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+      --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+      --add-opens=java.base/sun.security.action=ALL-UNNAMED
+      --add-opens=java.base/sun.security.tools.keytool=ALL-UNNAMED
+      --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+      -Djdk.reflect.useDirectMethodHandle=false
+      -Dio.netty.tryReflectionSetAccessible=true</extraJavaTestArgs>
+
+    <debugArgLine>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</debugArgLine>
   </properties>
 
   <dependencyManagement>
@@ -64,11 +92,23 @@
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-hive_${scalaVersion}</artifactId>
         <version>${sparkVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-sql_${scalaVersion}</artifactId>
         <version>${sparkVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.paimon</groupId>
@@ -136,6 +176,14 @@
     </dependencies>
   </dependencyManagement>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${scalaVersion}</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <!-- compile java -->
@@ -186,6 +234,54 @@
               <goal>testCompile</goal>
             </goals>
             <phase>process-test-resources</phase>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- disable surefire globally, only enable it on pure Java modules -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.plugin.surefire.version}</version>
+        <!-- Note config is repeated in scalatest config -->
+        <configuration>
+          <skipTests>true</skipTests>
+          <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+          <argLine>${extraJavaTestArgs}</argLine>
+          <environmentVariables />
+          <systemPropertyVariables>
+            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+            <spark.driver.memory>1g</spark.driver.memory>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <!-- enable scalatest -->
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <version>${maven.plugin.scalatest.version}</version>
+        <!-- Note config is repeated in surefire config -->
+        <configuration>
+          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+          <junitxml>.</junitxml>
+          <filereports>TestSuite.txt</filereports>
+          <argLine>${extraJavaTestArgs}</argLine>
+          <environmentVariables />
+          <systemProperties>
+            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+            <spark.driver.memory>1g</spark.driver.memory>
+          </systemProperties>
+          <tagsToExclude>${maven.plugin.scalatest.exclude.tags}</tagsToExclude>
+          <tagsToInclude>${maven.plugin.scalatest.include.tags}</tagsToInclude>
+          <debugForkedProcess>${maven.plugin.scalatest.debug.enabled}</debugForkedProcess>
+          <debugArgLine>${debugArgLine}</debugArgLine>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
